--- a/5. Template Literals/index.html
+++ b/5. Template Literals/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Template Literal</title>
+    <style>
+      .highlight {
+        background-color: tomato;
+      }
+    </style>
   </head>
   <body>
     <script src="script.js"></script>
